# milkie

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  README_CN.md  docker-compose.test.yml  jest.config.ts  jest.setup.ts  node_modules  package-lock.json  package.json  pyproject.toml  roadmap.md  tsconfig.json
.monastery/: thesis.md
3rd/llama_index/: default_prompts.py  refine.py
agents/: diagnoser.md  local_news.sh  local_paper_report.sh  remote_news.sh  remote_news_direct.sh  remote_paper.sh  remote_paper_direct.sh  run_integration_test.py
benchmark/: fd100_key.jsonl  file_lookup.jsonl  santi.jsonl
clients/bird/: base_searcher.py  base_sql_searcher.py  bird.sh  bird.yaml  config.py  database.py  logger.py  searcher.py  server.py  task_alignment_searcher.py  text2sql_searcher.py  tree.py
config/: global.yaml  global_filelookup.yaml  global_sample.yaml  robots.yaml
data/: NPS分析结果.xls
data/file_lookup/: pdfs.jsonl
data/santi/: santi.txt
data_process/: file_metadata.py
docs/: connecting-data-tools-to-lineage.md  lineage-lifecycle.md  lineage-taxonomy.md
docs/design/: 124-serve-endpoints.md  162-portable-hierarchical-entity-resolver.md  175-decore-multistate-fsm.md  40-lineage-citation-goal.md  79-service-logging.md  80-stream-token-delta.md  83-context-vars.md  86-milkie-serve.md
docs/en/: guide.md
docs/stories/: INDEX.md  README.md  s-001-react-with-intra-agent-parallel-tools.md  (+14 more)
examples/: .gitignore  README.md  paper_subscribe.at  quiz.at  recommend_filepath.at  recommend_filepath.mk  record_csv.at  search_and_reason.at  slot_collect.at
experiments/: bird.py  bird.sh
fe/: README.md  index.html  package-lock.json  package.json  vite.config.ts
integration_test/: filesys_test.py
milkie/: __init__.py  action.py  agent.py  configs.py  context.py  custom_refine_program.py  decision.py  experiment.py  global_context.py  grounding.py  log.py  logger.py  model_factory.py  reasoning.py  response.py  settings.py  strategy.py  testsuite.py  trace.py
playground/: base_experiment.py  global_config.py  init.py  model_repos.py  set_env.py
prompts/: block_process.txt  block_summary.txt  file_lookup.txt  hyde.txt  qa_init.txt  qa_refine.txt  qa_strict.txt  query_rewrite.txt  system_prompt.txt  system_qwen.txt
scripts/: run_test.py  run_ut.py
speed/: experiment.py
src/: index.ts
tests/: test_flow_block.py  test_for_block.py  test_inst_flag.py  test_llm_block.py  test_task_engine.py
tools/: llm_tester.py  metric_painter.py  request_analyst.py
(+572 files in other folders)
