[tool.poetry]
name = "milkie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
openai = "^1.3.5"
bitsandbytes = "^0.43"
vllm = "^0.4"
transformers = "^4.40.1"
sacred = "^0.8"
paddleocr = "^2.7"
common = "^0.1"
paddle = "^1"
paddlepaddle = "^2.6"
llama_index = "^0.10"
llama-index-llms-vllm = "*"
flash-attn = "^2.5.7"
optimum = "*"
auto-gptq = "*"
autoawq = "*"
jieba = "*"
unstructured = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"