[tool.poetry]
name = "milkie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
openai = "^1.0.0"
bitsandbytes = "^0.43"
vllm = "^0.4"
transformers = "^4.40.1"
sacred = "^0.8"
paddleocr = "^2.7"
common = "^0.1"
dual = "^0.1.0"
tight = "^0.1.0"
data = "^0.4"
prox = "^0.0.17"
paddle = "^1"
paddlepaddle = "^2.6"
newspaper3k = "^0.2.8"
PyPDF2 = "^3.0.1"
markdown2 = "^2.5.1"

llama_index = "^0.10"
llama-index-llms-vllm = "*"
llama-index-readers-file = "*"
llama-index-llms-huggingface = "*"
llama-index-postprocessor-flag-embedding-reranker = "*"
llama-index-retrievers-bm25 = "*"
llama-index-embeddings-huggingface = "*"

flash-attn = "^2.5.7"
optimum = "*"
auto-gptq = "*"
autoawq = "*"
jieba = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test*"